tests/typing/pass/constructor_precond/constructor_precond_pass8.act
contract A

constructor(uint x) payable
iff 
    CALLVALUE > 5
creates
    uint w := x
    uint BALANCE := CALLVALUE

contract B

constructor(address<A> x, address<A> y) payable
iff
    address(x) != address(y)
    CALLVALUE < 10
creates
    A a1 := x
    A a2 := y
    uint BALANCE := CALLVALUE


contract C

constructor()
creates
    B b := new B(new A(11) with callvalue(6), new A(42) with callvalue(12)) with callvalue(2)